# dotfiles

./: .gitignore  README.md
auto_shutdown/: install.sh  shutdown_if_no_sessions  shutdown_if_no_sessions.service  shutdown_if_no_sessions.sh  shutdown_if_no_sessions.timer
docker/: install.sh
eslint/: eslint.config.js  eslintrc.json.symlink  install.sh
firejail/: chromium.local  firejail.profile  globals.local  install.sh  keepassxc.local  lazygit.profile  nix-shell.profile  npm.local  npm.profile  npx.profile  nvim.local  nvim.profile  syncthing_1_firejail.conf
functions/: add-ssh  asciicast_record.sh  aws-mfa-auth  aws-mfa-deauth  background_process.sh  cleanup.sh  connect_dev.sh  get-volume.sh  get_cpu_credits.sh  get_mem.sh  manage-brightness.sh  recording_setup.sh  refresh-tmux-env.sh  setup_env.sh  start_instance.sh  stop_instance.sh  transfer_files.sh  vnc_disc.sh  vnc_setup.sh  watch_dir.sh
git/: gitconfig  install.sh
graphical/: alacritty.toml.symlink  alacritty.yml.symlink  bash_profile  bashrc  install.sh  keyd.conf  logind_10-desktop.conf  ssh-agent_1_display.conf  xinitrc-highres.symlink  xinitrc.symlink  xmobarrc.symlink  xmonad.hs  xorg_00-keyboard.conf  xorg_30-touchpad.conf  xscreensaver.symlink
nix-npm/: default.nix
nix-nvim/: default.nix  init.lua
nix-utils/: .gitignore  all-info.nix  consts.nix  default.nix  default2.nix  info.nix  launcher.nix  lib.nix  rust-src.nix  seccomp.nix  utils.nix  wrapper.nix  wrapper2.nix
nix-utils/_wrapper/runner/: Cargo.toml  README.md  default.nix
nix-utils/_wrapper/runner/src/: config.rs  error.rs  main.rs  runtime.rs
nix-utils/opencode/host-tools-mcp/: Cargo.toml
nix-utils/opencode/host-tools-mcp/src/: broker.rs  lib.rs  main.rs  register.rs
nix-utils/opencode/host-tools-mcp/tests/: broker.rs  e2e.rs  register_cli.rs
nvim/: init.lua  init.vim  install.sh
oh-my-zsh/: install.sh
restic/: install.sh  restic@.service  restic@.timer
saws/: install.sh
script/: install
syncthing-monitoring/: install.sh  monitoring.mjs  syncthing-monitoring.service  syncthing-monitoring.timer
system/: _path.zsh
(+105 files in other folders)
