[package]
name = "nix-sandbox-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nix = { version = "0.31.1", features = ["signal", "process", "user", "fs"] }
signal-hook = "0.3"
seccompiler = "0.5"
