[package]
name = "host-tools-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
nix = { version = "0.31", features = ["process", "signal", "term"] }
# Pinned to the 1.5 line: rmcp 1.6/1.7 change the initialize/protocol-version
# negotiation, which breaks the MCP bridge (e2e tests time out). Upgrading needs a
# separate server-side migration; `~1.5` still takes 1.5.x patch updates.
rmcp = { version = "~1.5", features = ["server", "macros", "schemars", "transport-async-rw"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
vt100 = "0.16"

[dev-dependencies]
rand = "0.10"

[lints.rust]
unsafe_code = "deny"
